--- a/src/styles/Goods.module.css
+++ b/src/styles/Goods.module.css
@@ -138,7 +138,7 @@
   cursor: pointer;
   border: 1px solid #ffd700;
   box-sizing: border-box;
-  border-radius: 5px;
+  /* border-radius: 5px; */
   transition: all 0.3s;
 }
 
@@ -151,7 +151,7 @@
   text-align: right;
   border: 1px solid #000;
   box-sizing: border-box;
-  border-radius: 5px;
+  /* border-radius: 5px; */
   transition: all 0.3s;
 }
 
