--- a/src/styles/Goods.module.css
+++ b/src/styles/Goods.module.css
@@ -849,6 +849,7 @@
   font-size: 1.4rem;
   box-shadow: 0 1px 4px rgb(0 0 0 / 10%);
   overflow: hidden;
+  border-radius: 10px;
 }
 
 .sort_nomal,
@@ -926,7 +927,7 @@
   color: inherit;
   text-decoration: none;
   /* border: 1px solid #eaeaea; */
-  /* border-radius: 5px; */
+  border-radius: 10px;
   width: 100% !important;
   height: auto !important;
   background-color: #fff;
