--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -249,6 +249,7 @@
     font-size: 1.4rem;
     position: relative;
     box-shadow: 0 1px 4px rgb(0 0 0 / 10%);
+    border-radius: 10px;
     /* opacity: 0;
     visibility: hidden; */
   }
@@ -309,6 +310,7 @@
     font-size: 1.4rem;
     position: relative;
     box-shadow: 0 1px 4px rgb(0 0 0 / 10%);
+    border-radius: 10px;
     /* opacity: 0;
     visibility: hidden; */
   }
