--- a/src/styles/components/form.module.css
+++ b/src/styles/components/form.module.css
@@ -174,11 +174,12 @@
   box-sizing: border-box;
   margin: 0 0 30px 0;
   width: 100%;
-  padding: 15px 0;
+  padding: 10px 0;
   position: relative;
   border: none;
   font-size: 1.6rem;
   cursor: pointer;
+  border-radius: 10px;
 }
 
 .btn_login_twitter {
