--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -248,7 +248,7 @@
     transition: all 0.5s;
     font-size: 1.4rem;
     position: relative;
-    box-shadow: 0 1px 4px rgb(0 0 0 / 10%);
+    /* box-shadow: 0 1px 4px rgb(0 0 0 / 10%); */
     border-radius: 10px;
     /* opacity: 0;
     visibility: hidden; */
@@ -309,7 +309,7 @@
     transition: all 0.5s;
     font-size: 1.4rem;
     position: relative;
-    box-shadow: 0 1px 4px rgb(0 0 0 / 10%);
+    /* box-shadow: 0 1px 4px rgb(0 0 0 / 10%); */
     border-radius: 10px;
     /* opacity: 0;
     visibility: hidden; */
