--- a/src/styles/ScrollButton.module.css
+++ b/src/styles/ScrollButton.module.css
@@ -1,7 +1,7 @@
 .button_scroll {
   width: 60px;
   height: 60px;
-  position: fixed;
+  position: relative;
   left: 20px;
   bottom: 20px;
   background-color: #68a9cf;
@@ -14,7 +14,7 @@
 .button_scroll_active {
   width: 60px;
   height: 60px;
-  position: fixed;
+  position: relative;
   left: 20px;
   bottom: 20px;
   background-color: #68a9cf;
@@ -24,6 +24,7 @@
   opacity: 0.7;
   transition: all 0.3s;
   cursor: pointer;
+  pointer-events: auto;
 }
 /* .button_scroll_active:hover {
   background-color: red;
@@ -53,4 +54,15 @@
   left: 0;
   width: 100%;
   height: 200px;
+}
+
+.scrollContainer {
+  width: 100%;
+  max-width: 800px;
+  position: fixed;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: 0 auto;
+  pointer-events: none;
 }
