--- a/src/styles/components/form.module.css
+++ b/src/styles/components/form.module.css
@@ -17,12 +17,12 @@
 .btn_submit_active {
   box-sizing: border-box;
   margin: 0;
+  padding: 10px 0;
   width: 100%;
-  height: 40px;
   position: relative;
   border: none;
-  border-radius: 10px;
-  font-size: 1.4rem;
+  border-radius: 5px;
+  font-size: 1.6rem;
   color: #fff;
   transition: all 0.3s;
 }
@@ -36,46 +36,17 @@
   cursor: pointer;
 }
 
-.btn_svg_container {
-  display: block;
-  content: '';
+.btn_submit svg,
+.btn_submit_active svg {
   position: absolute;
-  width: 20px;
-  height: 20px;
-  top: 10px;
+  width: 24px;
+  height: 24px;
+  top: 50%;
   left: 15px;
-  color: #fff;
-}
-.btn_svg_container svg {
-  width: 20px;
-  height: 20px;
+  transform: translate(0, -50%);
+  -webkit-transform: translate(0, -50%);
+  -ms-transform: translate(0, -50%);
   fill: #fff;
-}
-
-/* ボタンのスピナー */
-
-.btn_spinner {
-  display: block;
-  content: '';
-  position: absolute;
-  top: 10px;
-  right: 28px;
-  width: 20px;
-  height: 20px;
-  color: #fff;
-  opacity: 0;
-}
-
-.btn_spinner_active {
-  display: block;
-  content: '';
-  position: absolute;
-  top: 10px;
-  right: 28px;
-  width: 20px;
-  height: 20px;
-  color: #fff;
-  opacity: 1;
 }
 
 /* テキスト入力 */
@@ -89,11 +60,13 @@
 }
 
 .input_text,
-.input_password {
+.input_password,
+.input_text_validated,
+.input_password_checked {
   margin: 0;
-  padding: 0 20px 3px 20px;
+  padding: 10px 20px;
   width: 100%;
-  height: 40px;
+  font-size: 1.6rem;
   border-radius: 5px;
 }
 
@@ -105,11 +78,6 @@
 
 .input_text_validated,
 .input_password_checked {
-  margin: 0;
-  padding: 0 20px 3px 20px;
-  width: 100%;
-  height: 40px;
-  border-radius: 10px;
   background-color: #fff;
   border: 1px solid #68a9cf;
 }
@@ -179,7 +147,7 @@
   border: none;
   font-size: 1.6rem;
   cursor: pointer;
-  border-radius: 10px;
+  border-radius: 5px;
 }
 
 .btn_login_twitter {
@@ -216,70 +184,6 @@
   -ms-transform: translate(0, -50%);
 }
 
-/* ステップ */
-
-.step_container {
-  width: 100%;
-  margin: 10px 0 70px 0;
-  padding: 0 10%;
-  display: flex;
-  justify-content: space-between;
-  position: relative;
-}
-
-.step_container::before,
-.step_container::after {
-  content: '';
-  width: 6px;
-  height: 6px;
-  border: 0;
-  border-top: solid 3px #68a9cf;
-  border-right: solid 3px #68a9cf;
-  position: absolute;
-  top: 25px;
-  left: 32%;
-  margin-top: -4px;
-  transform: rotate(45deg);
-}
-
-.step_container::before {
-  left: 32%;
-}
-
-.step_container::after {
-  right: 32%;
-}
-
-.step_off,
-.step_on {
-  width: 50px;
-  height: 50px;
-  border-radius: 50px;
-  line-height: 50px;
-  font-size: 1.6rem;
-  color: #fff;
-  position: relative;
-}
-
-.step_off {
-  background-color: #ccc;
-}
-
-.step_on {
-  background-color: #f2c746;
-}
-
-.step_off span,
-.step_on span {
-  width: 90px;
-  font-size: 1.2rem;
-  color: #fff;
-  position: absolute;
-  top: 50px;
-  left: -20px;
-  color: #666;
-}
-
 /* セレクトボックス */
 
 .birth_container {
@@ -289,8 +193,6 @@
   justify-content: space-between;
   min-width: 260px;
   width: 70%;
-  height: 40px;
-  border-radius: 10px;
 }
 
 .birth_container :before,
@@ -321,13 +223,11 @@
 .input_select_active {
   margin: 0;
   width: 110px;
-  padding: 0 20px 0 10px;
-  height: 40px;
-  font-size: 14px;
+  padding: 10px 20px 10px 10px;
+  font-size: 1.6rem;
   position: relative;
   background-color: #edf2f7;
-  border-radius: 10px;
-  letter-spacing: 4px;
+  border-radius: 5px;
   transition: all 0.5s;
 }
 .input_select:focus,
