--- a/src/styles/Modal.module.css
+++ b/src/styles/Modal.module.css
@@ -53,6 +53,7 @@
   opacity: 1;
   visibility: visible;
   /* transform: scale(1); */
+  border-radius: 10px;
   transform: translateY(0);
   transition: 0.2s;
   min-width: 280px;
@@ -130,7 +131,7 @@
 .title {
   width: 100%;
   margin: 20px 0 30px 0;
-  font-size: 1.6rem;
+  font-size: 1.8rem;
   font-weight: bold;
 }
 
@@ -149,15 +150,13 @@
 
 .button {
   margin: 0;
-  width: 100%;
-  height: 40px;
+  padding: 10px 0;
+  width: 60%;
   background-color: #68a9cf;
   border-radius: 5px;
   border: 0;
-  font-size: 1.4rem;
-  font-weight: bold;
+  font-size: 1.6rem;
   color: #fff;
-  letter-spacing: 2px;
   text-align: center;
   cursor: pointer;
 }
