--- a/src/styles/Header.module.css
+++ b/src/styles/Header.module.css
@@ -36,6 +36,29 @@
   color: #68a9cf;
 }
 
+.btn_search {
+  margin: 0;
+  width: 60px;
+  height: 60px;
+  position: relative;
+  cursor: pointer;
+}
+
+.btn_search svg {
+  display: block;
+  content: '';
+  position: absolute;
+  color: #fff;
+  width: 30px;
+  height: 30px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  fill: #666;
+}
+
 .btn_login,
 .btn_login_link {
   margin: 0;
