--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -120,6 +120,8 @@
 
 .search {
   width: 100%;
+  font-size: 1.6rem;
+  line-height: 1.6rem;
   padding: 15px 0 15px 25px;
   border: 1px solid #fff;
   border-radius: 3rem;
