--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -121,7 +121,6 @@
 .search {
   width: 100%;
   font-size: 1.6rem;
-  line-height: 1.6rem;
   padding: 15px 0 15px 25px;
   border: 1px solid #fff;
   border-radius: 3rem;
@@ -132,6 +131,7 @@
 }
 .search_active {
   width: 100%;
+  font-size: 1.6rem;
   padding: 15px 0 15px 25px;
   border: 1px solid #68a9cf;
   border-radius: 3rem;
@@ -153,6 +153,8 @@
   border: 0;
   left: 50%;
   transform: translate(-50%, 0);
+  -webkit-transform: translate(-50%, 0);
+  -ms-transform: translate(-50%, 0);
 }
 
 .search_button,
@@ -164,6 +166,8 @@
   right: 18px;
   top: 50%;
   transform: translate(0, -50%);
+  -webkit-transform: translate(0, -50%);
+  -ms-transform: translate(0, -50%);
 }
 
 .search_button svg,
