--- a/src/styles/components/form.module.css
+++ b/src/styles/components/form.module.css
@@ -2,7 +2,7 @@
 
 .form {
   margin: 0 auto;
-  padding: 20px 0;
+  padding: 20px;
   text-align: center;
   border: 1px solid #e6e6e6;
   border-radius: 10px;
