--- a/src/styles/Goods.module.css
+++ b/src/styles/Goods.module.css
@@ -8,6 +8,19 @@
 }
 .wrapper_white {
   width: 100%;
+  padding: 30px 0 30px 0;
+  position: relative;
+}
+.wrapper_white::after {
+  content: '';
+  position: absolute;
+  background: linear-gradient(45deg, #f1f1f1 50%, transparent 52%),
+    linear-gradient(315deg, #f1f1f1 50%, transparent 52%);
+  background-size: 20px 20px;
+  height: 14px;
+  width: 100%;
+  left: 0;
+  bottom: 0;
 }
 .wrapper_glay {
   width: 100%;
