--- a/src/styles/Goods.module.css
+++ b/src/styles/Goods.module.css
@@ -14,13 +14,13 @@
 .wrapper_white::after {
   content: '';
   position: absolute;
-  background: linear-gradient(45deg, #f1f1f1 50%, transparent 51%),
-    linear-gradient(315deg, #f1f1f1 50%, transparent 51%);
+  background: linear-gradient(45deg, #f1f1f1 50%, transparent 50%),
+    linear-gradient(315deg, #f1f1f1 50%, transparent 50%);
   background-size: 20px 20px;
   height: 14px;
   width: 100%;
   left: 0;
-  bottom: 20px;
+  bottom: 0;
 }
 .wrapper_glay {
   width: 100%;
