--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -1,7 +1,14 @@
 .main {
   max-width: 840px;
   min-width: 320px;
-  margin: 80px auto 0 auto;
+  margin: 0 auto 0 auto;
+  padding: 80px 0 0 0;
+}
+
+.main_g {
+  max-width: 840px;
+  min-width: 320px;
+  margin: 0 auto 0 auto;
 }
 
 /* .new_hot_label {
@@ -193,7 +200,6 @@
   flex-wrap: wrap;
   min-width: 320px;
   max-width: 840px;
-  margin-top: 10rem;
   padding: 0 10px;
 }
 
@@ -381,11 +387,16 @@
 }
 
 .wrapper_white {
+  margin: 0;
+  padding: 0 0 100px 0;
   width: 100%;
+  background: url('/images/background.png');
+  background-repeat: repeat;
 }
 .wrapper_glay {
+  margin: 0;
   width: 100%;
   background-color: #f1f1f1;
   /* background-color: #faf9f7; */
-  padding: 0 0 60px 0;
+  padding: 30px 0 60px 0;
 }
