--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -390,7 +390,7 @@
   margin: 0;
   padding: 0 0 100px 0;
   width: 100%;
-  background: url('/images/background.png');
+  background: url('/images/background2.png');
   background-repeat: repeat;
 }
 .wrapper_glay {
