--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -392,6 +392,7 @@
   width: 100%;
   background: url('/images/background2.png');
   background-repeat: repeat;
+  background-position: 50% 0%;
 }
 .wrapper_glay {
   margin: 0;
