--- a/src/styles/Goods.module.css
+++ b/src/styles/Goods.module.css
@@ -9,10 +9,10 @@
 .wrapper_white {
   margin: 0;
   width: 100%;
-  background: url('/images/background9.png');
+  /* background: url('/images/background9.png');
   background-repeat: repeat;
   background-position: 50% 0%;
-  background-size: 450px 900px;
+  background-size: 450px 900px; */
   padding: 30px 0 30px 0;
   position: relative;
 }
@@ -30,6 +30,7 @@
 .wrapper_glay {
   width: 100%;
   background-color: #f1f1f1;
+  /* background-color: #fff; */
   /* background-color: #faf9f7; */
   padding: 30px 0 60px 0;
 }
@@ -950,7 +951,8 @@
   font-size: 1.4rem;
   position: relative;
   overflow: hidden;
-  /* box-shadow: 0 1px 4px rgb(0 0 0 / 5%); */
+  /* box-shadow: 0 0 10px rgb(0 0 0 / 10%);
+  border: 1px solid #ccc; */
 }
 
 .li_goods_line {
