--- a/src/styles/Header.module.css
+++ b/src/styles/Header.module.css
@@ -29,6 +29,7 @@
   font-size: 2.4rem;
   line-height: 60px;
   font-family: 'Montserrat', sans-serif;
+  /* font-family: 'Hind', sans-serif; */
   color: #000;
 }
 
