--- a/src/styles/Header.module.css
+++ b/src/styles/Header.module.css
@@ -26,9 +26,10 @@
 }
 .logo {
   margin: 0;
-  font-size: 2.4rem;
+  font-size: 2rem;
+  font-weight: normal;
   line-height: 60px;
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'FuturaPTMedium', sans-serif;
   /* font-family: 'Hind', sans-serif; */
   color: #000;
 }
