--- a/src/styles/components/view.module.css
+++ b/src/styles/components/view.module.css
@@ -1,6 +1,8 @@
 .content_title {
   margin: 30px 0 55px 0;
-  font-size: 24px;
+  font-size: 5rem;
+  font-weight: normal;
+  font-family: 'D-DINCondensed', sans-serif;
   position: relative;
   text-align: center;
 }
