--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -454,3 +454,19 @@
   text-overflow: ellipsis;
   white-space: nowrap;
 }
+
+.topic_title {
+  margin: 20px 0;
+  width: 100%;
+  padding: 0 20px;
+  font-size: 2.4rem;
+  font-weight: bold;
+}
+
+.topic_text {
+  margin: 20px 0;
+  width: 100%;
+  padding: 0 20px;
+  font-size: 1.6rem;
+  text-align: left;
+}
