--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -2,7 +2,11 @@
   max-width: 840px;
   min-width: 320px;
   margin: 0 auto 0 auto;
-  padding: 80px 0 0 0;
+  padding: 100px 0 150px 0;
+  background: url('/images/background11.png');
+  background-repeat: repeat-x;
+  background-position: 50% 0%;
+  background-size: 400px 600px;
 }
 
 .main_g {
@@ -396,10 +400,6 @@
   margin: 0;
   padding: 0 0 100px 0;
   width: 100%;
-  background: url('/images/background11.png');
-  background-repeat: repeat-x;
-  background-position: 50% 0%;
-  background-size: 400px 600px;
 
   position: relative;
 }
