--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -253,7 +253,7 @@
   }
 
   .li_event {
-    margin: 0 0 20px 0;
+    margin: 0 0 40px 0;
     padding: 0;
     text-align: left;
     color: inherit;
@@ -270,6 +270,8 @@
     border-radius: 10px;
     /* opacity: 0;
     visibility: hidden; */
+    /* box-shadow: 0 0 6px rgb(0 0 0 / 20%); */
+    border: 1px solid #ccc;
   }
 
   .title {
@@ -417,7 +419,8 @@
 .wrapper_glay {
   margin: 0;
   width: 100%;
-  background-color: #f1f1f1;
+  /* background-color: #f1f1f1; */
+  background-color: #fff;
   /* background-color: #faf9f7; */
   padding: 30px 0 60px 0;
 }
