--- a/src/styles/Goods.module.css
+++ b/src/styles/Goods.module.css
@@ -41,6 +41,7 @@
   padding: 0;
   background-color: #000;
   position: sticky;
+  position: -webkit-sticky;
   top: 0;
   z-index: 1;
   opacity: 0.7;
