--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -2,7 +2,7 @@
   max-width: 840px;
   min-width: 320px;
   margin: 0 auto 0 auto;
-  padding: 100px 0 150px 0;
+  padding: 100px 0 250px 0;
   background: url('/images/background11.png');
   background-repeat: repeat-x;
   background-position: 50% 0%;
@@ -511,4 +511,9 @@
 .fadein_left_after {
   left: 0px;
   opacity: 1;
+}
+
+.topic_container {
+  margin: 0 0 100px 0;
+  width: 100%;
 }
