--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -400,12 +400,11 @@
 
 .wrapper_white {
   margin: 0;
-  padding: 0 0 100px 0;
   width: 100%;
 
   position: relative;
 }
-.wrapper_white::after {
+/* .wrapper_white::after {
   content: '';
   position: absolute;
   background: linear-gradient(45deg, #f1f1f1 50%, transparent 50%),
@@ -415,14 +414,14 @@
   width: 100%;
   left: 0;
   bottom: 0;
-}
+} */
 .wrapper_glay {
   margin: 0;
   width: 100%;
   /* background-color: #f1f1f1; */
   background-color: #fff;
   /* background-color: #faf9f7; */
-  padding: 30px 0 60px 0;
+  padding: 0 0 60px 0;
 }
 
 .search_result,
