--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -333,6 +333,28 @@
     position: relative;
     /* box-shadow: 0 1px 4px rgb(0 0 0 / 10%); */
     border-radius: 10px;
+    opacity: 0.5;
+    /* opacity: 0;
+    visibility: hidden; */
+  }
+  .li_event_active {
+    margin: 0 0 20px 0;
+    padding: 0;
+    text-align: left;
+    color: inherit;
+    text-decoration: none;
+    /* border: 1px solid #eaeaea; */
+    /* border-radius: 5px; */
+    width: 100% !important;
+    max-width: 400px !important;
+    height: auto !important;
+    background-color: #fff;
+    transition: all 0.5s;
+    font-size: 1.4rem;
+    position: relative;
+    /* box-shadow: 0 1px 4px rgb(0 0 0 / 10%); */
+    border-radius: 10px;
+    opacity: 1;
     /* opacity: 0;
     visibility: hidden; */
   }
@@ -391,6 +413,11 @@
 
 .contents_title {
   margin: 10px 0;
+}
+.event_date {
+  margin: 10px 0;
+  padding: 14px 0 0 0;
+  font-size: 1.2rem;
 }
 
 .event_title {
@@ -509,6 +536,16 @@
 
 .fadein_left_after {
   left: 0px;
+  opacity: 1;
+}
+
+.fadein_right_before {
+  right: -50px;
+  opacity: 0;
+}
+
+.fadein_right_after {
+  right: 0px;
   opacity: 1;
 }
 
