--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -270,7 +270,7 @@
     border-radius: 10px;
     /* opacity: 0;
     visibility: hidden; */
-    box-shadow: 0 0 6px rgb(0 0 0 / 20%);
+    /* box-shadow: 0 0 6px rgb(0 0 0 / 20%); */
     /* border: 1px solid #ccc; */
   }
 
@@ -445,8 +445,8 @@
 .wrapper_glay {
   margin: 0;
   width: 100%;
-  /* background-color: #f1f1f1; */
-  background-color: #fff;
+  background-color: #f1f1f1;
+  /* background-color: #fff; */
   /* background-color: #faf9f7; */
   padding: 0 0 60px 0;
 }
