--- a/src/styles/Goods.module.css
+++ b/src/styles/Goods.module.css
@@ -32,7 +32,7 @@
   background-color: #f1f1f1;
   /* background-color: #fff; */
   /* background-color: #faf9f7; */
-  padding: 30px 0 60px 0;
+  padding: 60px 0 60px 0;
 }
 
 .total_bar_container {
@@ -764,7 +764,7 @@
 }
 
 .sort_arrow_container {
-  margin: 0 0 20px 0;
+  margin: 0 0 40px 0;
   padding: 0 10px;
   width: 100%;
   height: auto;
@@ -939,7 +939,7 @@
 }
 .card2 {
   margin: 0 0 40px 0;
-  padding: 10px 20px;
+  padding: 20px;
   text-align: left;
   color: inherit;
   text-decoration: none;
