--- a/src/styles/Header.module.css
+++ b/src/styles/Header.module.css
@@ -29,7 +29,8 @@
   font-size: 2.6rem;
   font-weight: normal;
   line-height: 60px;
-  font-family: 'FuturaPTMedium', sans-serif;
+  font-family: 'D-DINCondensed', sans-serif;
+  /* font-family: 'FuturaPTMedium', sans-serif; */
   /* font-family: 'Hind', sans-serif; */
   color: #000;
 }
