--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -204,16 +204,6 @@
   cursor: pointer;
 }
 
-.grid {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-  min-width: 320px;
-  max-width: 840px;
-  padding: 0 10px;
-}
-
 .li_event_padding {
   margin: 0;
   padding: 15px 10px 15px 15px;
@@ -239,22 +229,10 @@
   cursor: pointer;
 }
 
-@media screen and (max-width: 669px) {
+@media screen and (max-width: 700px) {
   .ul_event {
-    display: grid;
-    grid-template-columns: 100%;
     margin: 0;
-    padding: 0;
-    line-height: 0;
-    -webkit-column-count: 1;
-    -webkit-column-gap: 20px;
-    -moz-column-count: 1;
-    -moz-column-gap: 20px;
-    column-count: 1;
-    column-gap: 20px;
-    -webkit-column-break-inside: avoid;
-    page-break-inside: avoid;
-    break-inside: avoid;
+    padding: 0 10px;
   }
 
   .li_event {
@@ -300,37 +278,55 @@
     font-size: 1.5rem;
     color: #000;
   }
+
+  .grid {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    min-width: 320px;
+    max-width: 840px;
+    padding: 0 10px;
+    margin: 0 auto;
+  }
+
+  .event_list_container {
+    min-width: 320px;
+    max-width: 700px;
+    margin: 0;
+  }
 }
-@media screen and (min-width: 670px) {
-  .ul_event {
-    box-sizing: border-box;
-    display: grid;
-    grid-template-columns: auto auto;
+@media screen and (min-width: 701px) {
+  .grid {
+    display: flex;
+    justify-content: space-between;
+    min-width: 320px;
+    width: 840px;
+    padding: 0;
+    margin: 0 auto;
+  }
+
+  .event_list_container {
+    min-width: 320px;
+    max-width: 400px;
     margin: 0;
     padding: 0;
-    line-height: 0;
-    -webkit-column-count: 2;
-    -webkit-column-gap: 20px;
-    -moz-column-count: 2;
-    -moz-column-gap: 20px;
-    column-count: 2;
-    column-gap: 20px;
-    line-height: 0;
-    -webkit-column-break-inside: avoid;
-    page-break-inside: avoid;
-    break-inside: avoid;
-    width: 820px;
+  }
+
+  .ul_event {
+    margin: 0;
+    width: 100%;
+    padding: 0;
   }
 
   .li_event {
-    margin: 0 0 20px 0;
+    margin: 0 0 40px 0;
     padding: 0;
     text-align: left;
     color: inherit;
     text-decoration: none;
     /* border: 1px solid #eaeaea; */
     /* border-radius: 5px; */
-    width: 100% !important;
+    min-width: 320px;
     max-width: 400px !important;
     height: auto !important;
     background-color: #fff;
@@ -351,7 +347,7 @@
     text-decoration: none;
     /* border: 1px solid #eaeaea; */
     /* border-radius: 5px; */
-    width: 100% !important;
+    min-width: 320px;
     max-width: 400px !important;
     height: auto !important;
     background-color: #fff;
@@ -393,7 +389,7 @@
   border-left: 0;
   border-bottom: 1px solid #eaeaea;
   width: 100%;
-  margin: 20px 0 10px 0;
+  margin: 10px 0;
 }
 .li_event::before {
   content: '';
@@ -418,11 +414,12 @@
 }
 
 .contents_title {
-  margin: 10px 0;
+  margin: 0;
+  padding: 0;
 }
 .event_date {
-  margin: 10px 0;
-  padding: 14px 0 0 0;
+  margin: 0;
+  padding: 10px 0 0 0;
   font-size: 1.2rem;
 }
 
@@ -454,7 +451,13 @@
   background-color: #f1f1f1;
   /* background-color: #fff; */
   /* background-color: #faf9f7; */
-  padding: 0 0 60px 0;
+  padding: 30px 0 60px 0;
+}
+
+.main_g {
+  max-width: 840px;
+  min-width: 320px;
+  margin: 0 auto 0 auto;
 }
 
 .search_result,
