--- a/src/styles/Goods.module.css
+++ b/src/styles/Goods.module.css
@@ -785,6 +785,7 @@
 
 .arrow_all_close,
 .arrow_all_close_active {
+  margin: 0;
   width: 40px;
   height: 100%;
   position: relative;
@@ -845,6 +846,7 @@
 
 .arrow_all_open,
 .arrow_all_open_active {
+  margin: 0;
   width: 40px;
   height: 100%;
   position: relative;
@@ -1100,4 +1102,16 @@
   content: '';
   border-radius: 3px;
   background: #68a9cf;
+}
+
+.btn_show_list {
+  margin: 40px 0 0 0;
+  padding: 20px;
+  width: 200px;
+  border-radius: 30px;
+  border: 0px;
+  background-color: #ccc;
+  color: #fff;
+  font-size: 1.6rem;
+  font-weight: bold;
 }
