--- a/src/styles/Goods.module.css
+++ b/src/styles/Goods.module.css
@@ -1120,6 +1120,6 @@
   background-color: #ccc;
 }
 .btn_show_list_active {
-  background-color: #cf6775;
+  background-color: #f2c746;
   cursor: pointer;
 }
