--- a/src/styles/Header.module.css
+++ b/src/styles/Header.module.css
@@ -8,8 +8,8 @@
 .header {
   max-width: 800px;
   min-width: 320px;
-  height: 60px;
-  padding: 0 20px;
+  height: 80px;
+  padding: 0 0 0 20px;
   margin: auto;
   display: flex;
   justify-content: space-between;
@@ -26,7 +26,7 @@
 }
 .logo {
   margin: 0;
-  font-size: 3rem;
+  font-size: 3.4rem;
   font-weight: normal;
   line-height: 60px;
   font-family: 'D-DINCondensed', sans-serif;
@@ -41,8 +41,8 @@
 
 .btn_search {
   margin: 0;
-  width: 60px;
-  height: 60px;
+  width: 80px;
+  height: 80px;
   position: relative;
   cursor: pointer;
 }
