--- a/src/styles/Header.module.css
+++ b/src/styles/Header.module.css
@@ -8,7 +8,7 @@
 .header {
   max-width: 800px;
   min-width: 320px;
-  height: 80px;
+  height: 60px;
   padding: 0 0 0 20px;
   margin: auto;
   display: flex;
@@ -26,10 +26,10 @@
 }
 .logo {
   margin: 0;
-  font-size: 3.4rem;
+  font-size: 2.4rem;
   font-weight: normal;
   line-height: 60px;
-  font-family: 'D-DINCondensed', sans-serif;
+  font-family: 'FuturaPTMedium', sans-serif;
   /* font-family: 'FuturaPTMedium', sans-serif; */
   /* font-family: 'Hind', sans-serif; */
   color: #000;
@@ -41,10 +41,41 @@
 
 .btn_search {
   margin: 0;
-  width: 80px;
-  height: 80px;
+  width: 60px;
+  height: 60px;
   position: relative;
   cursor: pointer;
+  /* background-color: #ddd; */
+}
+
+.btn_search:before {
+  content: '';
+  position: absolute;
+  top: 14px;
+  left: 14px;
+  cursor: pointer;
+  display: inline-block;
+  width: 15px;
+  height: 15px;
+  text-align: center;
+  line-height: 15px;
+  border-radius: 50%;
+  border: solid 3px #666;
+  transition: all 0.7s;
+}
+
+.btn_search:after {
+  content: '';
+  position: absolute;
+  width: 4px;
+  height: 12px;
+  top: 36px;
+  left: 36px;
+  border-radius: 10px;
+  transform: translate(-50%, -50%) rotate(-45deg);
+  transition: all 0.7s;
+  cursor: pointer;
+  background-color: #666;
 }
 
 .btn_search svg {
