--- a/src/styles/Header.module.css
+++ b/src/styles/Header.module.css
@@ -45,34 +45,34 @@
   height: 60px;
   position: relative;
   cursor: pointer;
-  /* background-color: #ddd; */
+  background-color: #ddd;
 }
 
 .btn_search:before {
   content: '';
   position: absolute;
-  top: 14px;
-  left: 14px;
+  top: 20px;
+  left: 20px;
   cursor: pointer;
   display: inline-block;
-  width: 15px;
-  height: 15px;
+  width: 14px;
+  height: 14px;
   text-align: center;
-  line-height: 15px;
+  line-height: 14px;
   border-radius: 50%;
-  border: solid 3px #666;
+  border: solid 2px #666;
   transition: all 0.7s;
 }
 
 .btn_search:after {
   content: '';
   position: absolute;
-  width: 4px;
-  height: 12px;
+  width: 2px;
+  height: 8px;
   top: 36px;
-  left: 36px;
+  left: 39px;
   border-radius: 10px;
-  transform: translate(-50%, -50%) rotate(-45deg);
+  transform: translate(-50%, -50%) rotate(-50deg);
   transition: all 0.7s;
   cursor: pointer;
   background-color: #666;
