--- a/src/styles/components/SearchEventForm.module.css
+++ b/src/styles/components/SearchEventForm.module.css
@@ -125,6 +125,8 @@
   font-size: 1.2rem;
   -webkit-box-shadow: 0 0.5rem 1rem rgb(0 0 0 / 8%);
   box-shadow: 0 0.5rem 1rem rgb(0 0 0 / 8%);
+  border-radius: 10px;
+  overflow: hidden;
 }
 
 .search_result {
