--- a/src/styles/Goods.module.css
+++ b/src/styles/Goods.module.css
@@ -1183,3 +1183,33 @@
   transition: all 0.7s;
   cursor: pointer;
 }
+
+.group_container,
+.group_container_checked {
+  padding: 0 0 10px 0;
+  width: 100%;
+  margin: 0;
+  border-top: 1px solid #eaeaea;
+  border-right: 0;
+  border-left: 0;
+  border-bottom: 0;
+  transition: all 0.3s;
+  cursor: pointer;
+}
+
+.group_container {
+  background-color: #fff;
+}
+
+.group_container_checked {
+  background-color: #eaeaea;
+}
+
+/* .li_goods_line {
+  border-top: 0;
+  border-right: 0;
+  border-left: 0;
+  border-bottom: 1px solid #eaeaea;
+  width: 100%;
+  margin: 10px 0;
+} */
