--- a/src/styles/components/view.module.css
+++ b/src/styles/components/view.module.css
@@ -2,7 +2,7 @@
   margin: 30px 0 80px 0;
   font-size: 5rem;
   font-weight: normal;
-  font-family: 'D-DINCondensed', sans-serif;
+  font-family: 'FuturaPTMedium', sans-serif;
   position: relative;
   text-align: center;
 }
