--- a/src/styles/Goods.module.css
+++ b/src/styles/Goods.module.css
@@ -1126,15 +1126,16 @@
   border-radius: 30px;
   border: 0px;
   color: #fff;
-  font-size: 2rem;
-  font-weight: bold;
+  font-size: 2.4rem;
   transition: all 0.3s;
   position: relative;
+  font-family: 'FuturaPTMedium', sans-serif;
+  letter-spacing: 2px;
 }
 
 .btn_show_list,
 .btn_show_list_active {
-  padding: 20px 20px 20px 40px;
+  padding: 15px 20px 15px 34px;
   text-align: left;
 }
 
