--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -226,6 +226,7 @@
     min-width: 320px;
     max-width: 700px;
     margin: 0;
+    overflow: hidden;
   }
 
   .topic_container {
@@ -484,9 +485,4 @@
 .fadein_right_after {
   right: 0px;
   opacity: 1;
-}
-
-.abc {
-  margin: 0;
-  padding: 0;
 }
