--- a/src/styles/components/view.module.css
+++ b/src/styles/components/view.module.css
@@ -17,3 +17,26 @@
   border-radius: 3px;
   background: #68a9cf;
 }
+
+.box_white {
+  margin: 0;
+  width: 100%;
+  padding: 100px 0 0 0;
+  position: relative;
+  background: #fff;
+}
+
+.box_gray {
+  margin: 0;
+  width: 100%;
+  padding: 100px 0 0 0;
+  position: relative;
+  background: #fff;
+}
+
+.box_gray {
+  margin: 0;
+  width: 100%;
+  background-color: #f1f1f1;
+  padding: 30px 0 60px 0;
+}
